feat: Update home.html chart data properties
The `data` properties in the chart configuration for `xAxis` and `series` have been modified to use different values from the `data` object. This change improves the accuracy and relevance of the chart data.

--- a/html/home.html
+++ b/html/home.html
@@ -23,7 +23,7 @@
           },
           xAxis: {
             //api data
-            data: data.categories,
+            data: data.storeID,
           },
           yAxis: {},
           series: [
@@ -31,7 +31,7 @@
               name: "sales",
               type: "bar",
               //api data
-              data: data.numbers,
+              data: data.sum,
             },
           ],
         };
