feat: Update API endpoint for fetching revenue data
The API endpoint for fetching revenue data has been updated to use the correct URL (`http://localhost:3000/revenue`). This ensures that the chart on the home page displays accurate and up-to-date revenue information.

--- a/html/home.html
+++ b/html/home.html
@@ -12,7 +12,7 @@
   <script type="text/javascript">
     var myChart = echarts.init(document.getElementById("main"));
     //get data from api
-    fetch('https')
+    fetch('http://localhost:3000/revenue')
       .then(response => response.json())
       .then(data => {
 
