--- a/html/test.html
+++ b/html/test.html
@@ -1,61 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <script src="echarts.js"></script>
-  </head>
-  <body>
-    <h1>Echarts Test</h1>
-    <div id="main" style="width: 600px; height: 400px"></div>
-    <script type="text/javascript">
-      var myChart = echarts.init(document.getElementById("main"));
-      //get data from api
-      fetch(
-        "http://localhost:3000/revenue?date=2022-12-31&store=S062214,S013343,S216043" )
-        .then((response) => response.json())
-        .then((data) => {
-          const storeIDs = [];
-          const days = [];
-          const sums = [];
-
-          // Splitting the data into separate arrays
-          data.forEach((item) => {
-            storeIDs.push(item.storeID);
-            days.push(item.day);
-            sums.push(item.sum);
-          });
-
-          // Logging the results to the console
-          console.log("Store IDs:", storeIDs);
-          console.log("Days:", days);
-          console.log("Sums:", sums);
-
-          let option = {
-            tooltip: {},
-            legend: {
-              data: ["sales"],
-            },
-            xAxis: {
-              //api data
-              data: storeIDs,
-            },
-            yAxis: {},
-            series: [
-              {
-                name: "sales",
-                type: "bar",
-                //api data
-                data: sums,
-              },
-            ],
-          };
-
-          // Display the chart using the configuration items and data just specified.
-          myChart.setOption(option);
-        })
-        .catch((error) => {
-          console.error("Error fetching the data:", error);
-        });
-    </script>
+    <head>
+        <title></title>
+    </head>
+    <body>
+        <h1>Request Test</h1>
+        <script>
+            fetch('/revenue2?date=2022-12-31&store=S062214,S013343,S216043')
+            .then(response => response.json())
+            .then(stores => console.log(stores))
+        </script>
     </body>
 </html>
