--- a/html/home.html
+++ b/html/home.html
@@ -2,61 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <script src="static/echarts.js"></script>
+    <script src="/static/echarts.js"></script>
   </head>
 
   <body>
     <h1>Echarts Test</h1>
     <div id="main" style="width: 600px; height: 400px"></div>
-    <script type="text/javascript">
-      var myChart = echarts.init(document.getElementById("main"));
-      //get data from api
-      fetch(
-        "/revenue?date=2022-12-31&store=S062214,S013343,S216043" )
-        .then((response) => response.json())
-        .then((data) => {
-          const storeIDs = [];
-          const days = [];
-          const sums = [];
-
-          // Splitting the data into separate arrays
-          data.forEach((item) => {
-            storeIDs.push(item.storeID);
-            days.push(item.day);
-            sums.push(item.sum);
-          });
-
-          // Logging the results to the console
-          console.log("Store IDs:", storeIDs);
-          console.log("Days:", days);
-          console.log("Sums:", sums);
-
-          let option = {
-            tooltip: {},
-            legend: {
-              data: ["sales"],
-            },
-            xAxis: {
-              //api data
-              data: storeIDs,
-            },
-            yAxis: {},
-            series: [
-              {
-                name: "sales",
-                type: "bar",
-                //api data
-                data: sums,
-              },
-            ],
-          };
-
-          // Display the chart using the configuration items and data just specified.
-          myChart.setOption(option);
-        })
-        .catch((error) => {
-          console.error("Error fetching the data:", error);
-        });
+    <script src="static/charts.js" type="text/javascript">
     </script>
   </body>
 </html>
