--- a/html/home.html
+++ b/html/home.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <script src="/static/echarts.js"></script>
+    <script src="static/charts.js" type="text/javascript"></script>
   </head>
 
   <body>
     <h1>Echarts Test</h1>
-    <div id="main" style="width: 600px; height: 400px"></div>
-    <script src="static/charts.js" type="text/javascript">
+    <div id="test" style="width: 600px; height: 400px"></div>
+    <script>
+      testbarchart();
+    </script>
+    <div id="gauge-chart" style="width: 600px; height: 400px"></div>
+    <script>
+      gaugechart();
     </script>
   </body>
 </html>
