--- a/html/home.html
+++ b/html/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <script src="/static/echarts.js"></script>
     <script src="static/charts.js" type="text/javascript"></script>
+    <script type="text/javascript" src="https://fastly.jsdelivr.net/npm/echarts@5.5.0/dist/echarts.min.js"></script>
   </head>
 
   <body>
@@ -12,9 +13,11 @@
     <script>
       testbarchart();
     </script>
-    <div id="gauge-chart" style="width: 600px; height: 400px"></div>
+    <h1>Store "StoreID" quality </h1>
+    <div id="container" style="width: 600px; height: 600px"></div>
+      
     <script>
-      gaugechart();
+      gaugeChart();
     </script>
   </body>
 </html>
