--- a/html/home.html
+++ b/html/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <script src="/static/echarts.js"></script>
     <script src="static/charts.js" type="text/javascript"></script>
-    <script type="text/javascript" src="https://fastly.jsdelivr.net/npm/echarts@5.5.0/dist/echarts.min.js"></script>
+    <script type="text/javascript" src="/static/echarts.min.js"></script>
   </head>
 
   <body>
@@ -15,9 +15,12 @@
     </script>
     <h1>Store "StoreID" quality </h1>
     <div id="container" style="width: 600px; height: 600px"></div>
-      
     <script>
       gaugeChart();
+    </script>
+    <div id="revenue" style="width: 900px; height: 600px"></div>
+    <script>
+      revenueChart();
     </script>
   </body>
 </html>
