Refactor gaugeChart function and update home.html

--- a/html/home.html
+++ b/html/home.html
@@ -8,12 +8,7 @@
   </head>
 
   <body>
-    <h1>Echarts Test</h1>
-    <div id="test" style="width: 600px; height: 400px"></div>
-    <script>
-      testbarchart();
-    </script>
-    <h1>Store "StoreID" quality </h1>
+    <h1 id="Store-quality">""</h1>
     <div id="container" style="width: 600px; height: 600px"></div>
     <script>
       gaugeChart();
