--- a/html/mapStores.html
+++ b/html/mapStores.html
@@ -42,7 +42,7 @@
         }
 
         // Fetch the data and add markers
-        fetch('/test')
+        fetch('/storeLocations')
             .then(response => response.json())
             .then(stores => {
                 console.log(stores); // Log the data for debugging
