chore: Update home.html and index.ts to use company.html instead of home.html

--- a/html/individualStore.html
+++ b/html/individualStore.html
@@ -8,6 +8,10 @@
   </head>
 
   <body>
-    
+    <h1 id="Store-quality">""</h1>
+    <div id="container" style="width: 600px; height: 600px"></div>
+    <script>
+      gaugeChart();
+    </script>
   </body>
 </html>
