--- a/html/company.html
+++ b/html/company.html
@@ -9,5 +9,9 @@
 
   <body>
     
+    <div id="revenue" style="width: 900px; height: 600px"></div>
+    <script>
+      revenueChart();
+    </script>
   </body>
 </html>
