chore: Add individual store page and endpoint

--- a/html/individualStore.html
+++ b/html/individualStore.html
@@ -3,15 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <script src="/static/echarts.js"></script>
-    <script src="static/charts.js" type="text/javascript"></script>
-    <script type="text/javascript" src="/static/echarts.min.js"></script>
+    <script src="static/indivivdualCharts.js" type="text/javascript"></script>
+    <script type="text/javascript" src="/static/echarts.min.js"></script>#
+    
   </head>
 
   <body>
     <h1 id="Store-quality">""</h1>
     <div id="container" style="width: 600px; height: 600px"></div>
     <script>
+        
       gaugeChart();
     </script>
+    <div id="Store-revenue"style="width: 600px; height: 600px"></div>
+    <h1>st</h1>
+    <script>monthlyRevenue()</script>
   </body>
 </html>
