Add pizza pair Endpoint

--- a/html/mapCustomers.html
+++ b/html/mapCustomers.html
@@ -33,7 +33,7 @@
         }
 
         // Fetch the data and add markers to the cluster group
-        fetch('/customerLocations')
+        fetch('/api/customerLocations')
             .then(response => response.json())
             .then(stores => {
                 console.log(stores); // Log the data for debugging
