--- a/html/company.html
+++ b/html/company.html
@@ -1,16 +1,43 @@
-<!DOCTYPE hmtl>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <style>
+      .active {
+        background-color: #c0c0c0;
+      }
+    </style>
     <script src="/static/echarts.js"></script>
     <script src="static/charts.js" type="text/javascript"></script>
     <script type="text/javascript" src="/static/echarts.min.js"></script>
   </head>
 
   <body>
-    
+    <button id="bestButton">Best</button>
+    <button id="worstButton">Worst</button>
     <div id="revenue" style="width: 900px; height: 600px"></div>
     <script>
+      function setActiveButton(buttonId) {
+        document.getElementById("bestButton").classList.remove("active");
+        document.getElementById("worstButton").classList.remove("active");
+
+        document.getElementById(buttonId).classList.add("active");
+      }
+
+      function bestButton() {
+        revenueChart(true);
+        setActiveButton("bestButton");
+      }
+
+      function worstButton() {
+        revenueChart(false);
+        setActiveButton("worstButton");
+      }
+
+      document.getElementById("bestButton").addEventListener("click", bestButton);
+      document.getElementById("worstButton").addEventListener("click", worstButton);
+
+      setActiveButton("bestButton");
       revenueChart();
     </script>
   </body>
