--- a/html/company.html
+++ b/html/company.html
@@ -6,6 +6,15 @@
       .active {
         background-color: #c0c0c0;
       }
+
+      .chart-container {
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .chart {
+        width: 48%;
+      }
     </style>
     <script src="/static/echarts.js"></script>
     <script src="static/charts.js" type="text/javascript"></script>
@@ -15,7 +24,14 @@
   <body>
     <button id="bestButton">Best</button>
     <button id="worstButton">Worst</button>
-    <div id="revenue" style="width: 900px; height: 600px"></div>
+
+    <div class="chart-container">
+      <div id="revenue" class="chart" style="height: 600px;"></div>
+      <div id="revenueBar" class="chart" style="height: 600px;"></div>
+    </div>
+
+
+    
     <script>
       function setActiveButton(buttonId) {
         document.getElementById("bestButton").classList.remove("active");
@@ -39,6 +55,9 @@
 
       setActiveButton("bestButton");
       revenueChart();
+
+      // -------------
+      revenueBarChart();
     </script>
   </body>
 </html>
