chore: Remove commented out code in individualStore.html

--- a/html/individualStore.html
+++ b/html/individualStore.html
@@ -5,7 +5,7 @@
     <script src="/static/echarts.js"></script>
     <script src="static/indivivdualCharts.js" type="text/javascript"></script>
     <script type="text/javascript" src="/static/echarts.min.js"></script>
-    #
+    
   </head>
 
   <body>
@@ -28,7 +28,7 @@
     <div id="Heatmap" style="width: 600px; height: 600px"></div>
 
     <script>
-      heatmap();
+      //heatmap();
     </script>
   </body>
 </html>
