chore: Update API response in /api/pizzaPair endpoint

--- a/html/individualStore.html
+++ b/html/individualStore.html
@@ -25,10 +25,10 @@
     <script>
       monthlyRevenue();
     </script>
-    <div id="Heatmap" style="width: 600px; height: 600px"></div>
+    <div id="Heatmap" style="width: 1600px; height: 600px"></div>
 
     <script>
-      //heatmap();
+      heatmap();
     </script>
   </body>
 </html>
