Add time selection buttons for last year, last quarter, and last month

--- a/html/individualStore.html
+++ b/html/individualStore.html
@@ -10,8 +10,12 @@
 
   <body>
     <button id="redirectButton">MainPage</button>
+    <button id="Last-Year">Last Year</button>
+    <button id="Last-Quarter">Last Quarter</button>
+    <button id="Last-Month">Last Month</button>
     <script>
       backButton();
+      timeButtons();
     </script>
     <h1 id="Store-quality">""</h1>
     <div id="container" style="width: 600px; height: 600px"></div>
