--- a/html/company.html
+++ b/html/company.html
@@ -1,63 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <style>
-      .active {
-        background-color: #c0c0c0;
-      }
 
-      .chart-container {
-        display: flex;
-        justify-content: space-between;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <style>
+    .active {
+      background-color: #c0c0c0;
+    }
 
-      .chart {
-        width: 48%;
-      }
-    </style>
-    <script src="/static/echarts.js"></script>
-    <script src="static/charts.js" type="text/javascript"></script>
-    <script type="text/javascript" src="/static/echarts.min.js"></script>
-  </head>
+    .chart-container {
+      display: flex;
+      justify-content: space-between;
+    }
 
-  <body>
-    <button id="bestButton">Best</button>
-    <button id="worstButton">Worst</button>
+    .chart {
+      width: 48%;
+    }
+  </style>
+  <script src="/static/echarts.js"></script>
+  <script src="static/charts.js" type="text/javascript"></script>
+  <script type="text/javascript" src="/static/echarts.min.js"></script>
+</head>
 
-    <div class="chart-container">
-      <div id="revenue" class="chart" style="height: 600px;"></div>
-      <div id="revenueBar" class="chart" style="height: 600px;"></div>
-    </div>
+<body>
+  <button id="bestButton">Best</button>
+  <button id="worstButton">Worst</button>
+
+  <div class="chart-container">
+    <div id="revenue" class="chart" style="height: 600px;"></div>
+    <div id="revenueBar" class="chart" style="height: 600px;"></div>
+  </div>
 
 
-    
-    <script>
-      function setActiveButton(buttonId) {
-        document.getElementById("bestButton").classList.remove("active");
-        document.getElementById("worstButton").classList.remove("active");
 
-        document.getElementById(buttonId).classList.add("active");
-      }
+  <script>
+    function setActiveButton(buttonId) {
+      document.getElementById("bestButton").classList.remove("active");
+      document.getElementById("worstButton").classList.remove("active");
 
-      function bestButton() {
-        revenueChart(true);
-        setActiveButton("bestButton");
-      }
+      document.getElementById(buttonId).classList.add("active");
+    }
 
-      function worstButton() {
-        revenueChart(false);
-        setActiveButton("worstButton");
-      }
-
-      document.getElementById("bestButton").addEventListener("click", bestButton);
-      document.getElementById("worstButton").addEventListener("click", worstButton);
-
+    function bestButton() {
+      revenueChart(true);
       setActiveButton("bestButton");
-      revenueChart();
+    }
 
-      // -------------
-      revenueBarChart();
-    </script>
-  </body>
+    function worstButton() {
+      revenueChart(false);
+      setActiveButton("worstButton");
+    }
+
+    document.getElementById("bestButton").addEventListener("click", bestButton);
+    document.getElementById("worstButton").addEventListener("click", worstButton);
+
+    setActiveButton("bestButton");
+    revenueChart();
+
+    // -------------
+    revenueBarChart();
+    <h2 id="statsOverview">""  </h2>
+    // -------------
+
+  </script>
+</body>
+
 </html>
