--- a/html/company.html
+++ b/html/company.html
@@ -30,6 +30,8 @@
     <div id="revenue" class="chart" style="height: 600px;"></div>
     <div id="revenueBar" class="chart" style="height: 600px;"></div>
   </div>
+  <div id="statsOverview">
+  </div>
 
 
 
@@ -59,10 +61,11 @@
 
     // -------------
     revenueBarChart();
+
     // -------------
-    
-    </script>
-    <h2 id="statsOverview"> "" </h2>
+
+  </script>
+
 </body>
 
 </html>
