--- a/html/individualStore.html
+++ b/html/individualStore.html
@@ -38,16 +38,18 @@
       gaugeChart();
     </script>
     <div id="Store-revenue" style="width: 600px; height: 600px">
-      Store-revenue
+      
     </div>
-
     <script>
       monthlyRevenue();
     </script>
     <div id="Heatmap" style="width: 1600px; height: 600px"></div>
-
     <script>
       heatmap();
+    </script>
+    <div id="PizzaSize" style="width: 400px; height: 400px"></div>
+    <script>
+      pizzaSize();
     </script>
   </body>
 </html>
