--- a/html/individualStore.html
+++ b/html/individualStore.html
@@ -23,7 +23,9 @@
     
     <script>
       backButton();
-      timeButtons();
+      yearButton();
+      monthButton();
+      quarterButton();
       customDate();
     </script>
     
