--- a/html/individualStore.html
+++ b/html/individualStore.html
@@ -1,45 +1,54 @@
 <!DOCTYPE hmtl>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <script src="/static/echarts.js"></script>
-    <script src="static/indivivdualCharts.js" type="text/javascript"></script>
-    <script type="text/javascript" src="/static/echarts.min.js"></script>
-    
-  </head>
 
-  <body>
-    <button id="redirectButton">MainPage</button>
-    <button id="Last-Year">Last Year</button>
-    <button id="Last-Quarter">Last Quarter</button>
-    <button id="Last-Month">Last Month</button>
-    <div class="customdate" id="customDateForm">
-      <form id="dateForm">
-          <input type="date" id="startDate" name="startDate" value="2022-12-01" required>
-          <button id="customDate">"Custom Date"</button>
-      </form>
+<head>
+  <meta charset="UTF-8" />
+  <script src="/static/echarts.js"></script>
+  <script src="static/indivivdualCharts.js" type="text/javascript"></script>
+  <script type="text/javascript" src="/static/echarts.min.js"></script>
+
+</head>
+
+<body>
+  <button id="redirectButton">MainPage</button>
+  <button id="Year">Year</button>
+  <button id="Quarter">Quarter</button>
+  <button id="Month">Month</button>
+  <div class="customdate" id="customDateForm">
+    <form id="dateForm">
+      <input type="date" id="startDate" name="startDate" value="2022-12-01" required>
+      <button id="customDate">"Custom Date"</button>
+    </form>
   </div>
-</div>
-    <h1 id="Store-quality">""</h1>
-    <div id="container" style="width: 600px; height: 600px"></div>
-    <div id="Store-revenue" style="width: 600px; height: 600px"></div>
-    <div id="Heatmap" style="width: 1600px; height: 600px"></div>
-    <div id="PizzaSize" style="width: 400px; height: 400px"></div>
-  </body>
-  <script>
-      backButton();
-    
-      yearButton()
-      monthButton();
-      quarterButton();
-      customDate();
+  </div>
+  <h1 id="Store-quality">""</h1>
+  <div id="container" style="width: 600px; height: 600px"></div>
+  <div id="Store-revenue" style="width: 600px; height: 600px"></div>
+  <div id="Heatmap" style="width: 1600px; height: 600px"></div>
+  <div id="PizzaSize" style="width: 400px; height: 400px"></div>
+</body>
+<script>
+  backButton();
+  
+  document.getElementById("Year").addEventListener("click", function () {
+    updateCharts(subtractMonths(currentDate, 12));
+  });
+  document.getElementById("Quarter").addEventListener("click", function () {
+    updateCharts(subtractMonths(currentDate, 3));
+  });
+  document.getElementById("Month").addEventListener("click", function () {
+    updateCharts(subtractMonths(currentDate, 1));
+  });
 
-      gaugeChart();
+  customDate();
 
-      monthlyRevenue();
+  gaugeChart();
 
-      heatmap();
+  monthlyRevenue();
 
-      pizzaSize();
-  </script>
+  heatmap();
+
+  pizzaSize();
+</script>
+
 </html>
